--- a/about me and gallery.html
+++ b/about me and gallery.html
@@ -13,6 +13,14 @@
 
         a { color: blue; }
         hr { width: 90%; }
+        
+        
+        #footer {
+            margin-top: 50px;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.6);
+            border-top: 1px solid #aaa;
+        }
     </style>
 </head>
 <body id="top">
@@ -33,16 +41,17 @@
 <hr>
 
 <h2>✉ Contact Me</h2>
-<p>Email me at: <a href="mailto:student@example.com">160471delacuadra@depedmarikina.com</a></p>
+<p>Email me at: <a href="mailto:160471delacuadra@depedmarikina.com">160471delacuadra@depedmarikina.com</a></p>
 <hr>
 
 <h2>🔽 Bottom of the Page</h2>
 <a href="#top">Back to Top</a>
 <br><br>
 
-<div id="#footer"></div>
 
-<p>© 2025 My Connected Web</p>
+<div id="footer">
+    <p>© 2025 My Connected Web</p>
+</div>
 
 </body>
 </html>
