--- a/menu.html
+++ b/menu.html
@@ -2,14 +2,11 @@
 <html>
 <body>
 
-<td width="20%" valign="top">
-<body bgcolor="yellow">
-                <b> 📖 Categories</b><br>
-                <ul>
-                <li><a href="#">Home</a><br>
-                <li><a href="#">Breakfast</a><br>
-                <li><a href="#">Lunch</a><br>
-                <li><a href="#">Dinner</a><br>
-                <li><a href="#">Dessert</a><br>
-                <li><a href="#">MidnightSnack</a>
-            
+<h3>Forms Menu</h3>
+
+<a href="register.html" target="content">Registration Form</a><br>
+<a href="survey.html" target="content">Survey Form</a><br>
+<a href="biodata.html" target="content">Biodata Form</a><br>
+
+</body>
+</html>
