--- a/header.html
+++ b/header.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1 align="center">🍳 My Digital Cookbook</h1>
-    <p align="center">Delicious Recipes To Explore</p>
-    <body bgcolor="violet">
+<body style="margin:0;">
+
+<table width="100%" height="100%" bgcolor="#66CC66">
+    <tr>
+        <td>
+            <img src="logo.png" width="60" height="60">
+            <span style="font-size:28px; font-weight:bold;"> My Webforms Page</span>
+        </td>
+
+        <td align="right" style="padding-right:20px;">
+            <a href="home.html" target="content" style="color:white;">Home</a> |
+            <a href="about.html" target="content" style="color:white;">About</a>
+        </td>
+    </tr>
+</table>
+
+</body>
+</html>
