--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html>
-<body>
 
- <p align="center"> 📘 Created by Bench Rigel Dela Cuadra | STE 9 JUSTICE</p>
+<div style="width:100%; padding:10px; background:#f0f0f0; text-align:center; border-top:1px solid #ccc;">
+    © 2025 BENCH RIGEL DELA CUADRA | STE 9 JUSTICE.
+</div>
+
+
