--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>My Webforms Page</title>
 </head>
 
-<!-- Top header + left menu + right content -->
-<frameset rows="120px,*" border="0">
+<!-- Header + Middle + Footer -->
+<frameset rows="120px,*,60px" border="0">
 
     <!-- HEADER FRAME -->
     <frame src="header.html" scrolling="no" noresize>
@@ -16,6 +16,11 @@
         <frame src="home.html" name="content">
     </frameset>
 
+    <!-- FOOTER FRAME -->
+    <frame src="footer.html" scrolling="no" noresize>
+
 </frameset>
 
 </html>
+
+
