--- a/bench/index.html
+++ b/bench/index.html
@@ -106,7 +106,7 @@
     <div class="card">
     <h2>Video</h2>
     <video width="100%" height="400" controls>
-        <source src="witch" type="video/mp4">
+        <source src="witch.mp4" type="video/mp4">
        
     </video>
 </div>
@@ -122,6 +122,7 @@
 
 </body>
 </html>
+
 
 
 
