--- a/benc/index.html
+++ b/benc/index.html
@@ -13,7 +13,7 @@
 <header>
        
      <img src="https://i.ibb.co/DHvMxNZh/unnamed-2.jpg" alt="PixelFix Logo" class="logo-img">
-	 <h1>PixelFix Computer Shop</h1> 
+	 <h1>Benchi Computer Shop</h1> 
     <p>Fast. Reliable. Affordable.</p>
 </header>
 
@@ -50,3 +50,4 @@
 
 </body>
 </html>
+
