--- a/benc/contact.html
+++ b/benc/contact.html
@@ -22,7 +22,7 @@
 <section>
     <h2>Contact Us</h2>
     <div class="box">
-        <p>Email: pixelfix@email.com</p>
+        <p>Email: Benchi@email.com</p>
         <p>Phone: 0912-345-6789</p>
         <p>Address: Manila, Philippines</p>
         <p>Business Hours: Mon-Sat 9AM–6PM</p>
@@ -52,3 +52,4 @@
 
 </body>
 </html>
+
