--- a/BENCHBREWS/contact.html
+++ b/BENCHBREWS/contact.html
@@ -7,7 +7,7 @@
 <body>
 
 <header>
-    <div class="logo">BB</div>
+    <img src="https://image2url.com/r2/default/images/1770993382506-10d4694b-da7a-4640-a398-60e6d45220b3.jpg" alt="BenchBrews Logo" class="logo">
     <h1>BenchBrews</h1>
     <p class="tagline">Your Daily Brew, Perfected.</p>
 </header>
@@ -47,3 +47,4 @@
 
 </body>
 </html>
+
